Thu Jun  8 18:26:33 2006  Tim Janik  <timj@gtk.org>
        
        * drivers/bse-portaudio/acbeast.m4: update.

Thu May 25 14:38:32 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bsepcmdevice-portaudio.cc: Clip audio data - it seems that PortAudio
	doesn't clip, but JACK requires clipped audio data.

Thu May 25 13:07:39 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* autogen.sh:
	* Makefile.am: upgrade to automake-1.9

	* bsepcmdevice-portaudio.cc: compatibility with 0.7.0.

	* configure.in: bump version to 0.7.0.

	* README:
	* NEWS: Updated.

Wed May 25 23:30:43 2005  Tim Janik  <timj@gtk.org>

	* released bse-portaudio 0.6.6.

Sat May 14 19:30:36 2005  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-portaudio.cc (bse_pcm_device_port_audio_open): fixed 
	memory leaks if device opening failed. fixed error case handling all
	over the place, return proper BSE errors. allow "default" as device
	name. use bse_device_set_opened().

Sat May 14 18:07:39 2005  Tim Janik  <timj@gtk.org>

	* configure.in: version upgrade to 0.6.6. use PACKAGE_ as variable
	prefix instead of PKG_ which aparently produces problems for autoconf.

Mon Mar  7 07:55:46 2005  Tim Janik  <timj@gtk.org>

        * removed obsolete .h C++ headers.

        * adapted sources to compile against .hh C++ headers.

Sat Dec 18 23:02:07 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* bsepcmdevice-portaudio.cc: Fix compiler warning: latency in frames
	is a guint.

Sat Dec 18 00:02:29 2004  Tim Janik  <timj@gtk.org>

	* released 0.6.4.

Fri Dec 17 22:41:28 2004  Tim Janik  <timj@gtk.org>

	* configure.in: version 0.6.4, interface 0, binary 0.
	depend on BSE >= 0.6.4. CFLAGS and CXXFLAGS fixes.
	wrote portaudio.h check.

Thu Dec 16 16:28:56 2004  Tim Janik  <timj@gtk.org>

	* README: rewordeed the "Known Issues" section for clarity and to
	be worded on behalf of the project. requested feedback to the beast
	mailing list.

Thu Dec 16 14:45:36 2004  Stefan Westerfeld  <stefan@space.twc.de>
