@@ -1,3 +1,7 @@
+Sun Feb  4 18:09:15 2007  Tim Janik  <timj@gtk.org>
+
+	* updated all licenses to GNU Lesser General Public License version 2.1.
+
 Thu Jun  8 18:26:33 2006  Tim Janik  <timj@gtk.org>
         
         * drivers/bse-portaudio/acbeast.m4: update.
